--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-Hello World
-Why is this not working?
+<head>
+
+</head>
+<body>
+<img src="images/ACFcreativelogobig.png" alt="ACF creative logo"/>
+</body>
