updated site so it looks okay

--- a/index.html
+++ b/index.html
@@ -1,6 +1,42 @@
+<!doctype html>
+<html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>ACF Creative</title>
 
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://github.com/themes/minimal/javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
-<img src="images/ACFcreativelogobig.png" alt="ACF creative logo"/>
+<div class="wrapper">
+    <header>
+        <h1><img src="images/ACFcreativelogobig.png" alt="ACF creative logo"/></h1>
+        <!--<h1>ACF Creative</h1>-->
+        <h2>Home to Alasdair Cowie-Fraser (ACF) - Drupal developer</h2>
+
+    </header>
+    <section id="main">
+        <h3>Drupal expertise available for hire.</h3>
+        <p>Available to take on:</p>
+        <ul>
+            <li>Training</li>
+            <li>Consultancy</li>
+            <li>Backend dev work</li>
+        </ul>
+        <h3>Follow/Contact Alasdair: </h3>
+        <ul>
+            <li><p><a class="social" href="mailto:alasdair.cowie-fraser@acfcreative.com?subject=Are you available for work?" target="_top">Email<small>Feel free to drop me a line</small></a></li>
+            <li><p><a class="social" href="https://drupal.org/user/1347126" target="tab">Drupal.org<small>To see my Drupal profile</small></a></li>
+            <li><p><a class="social" href="https://twitter.com/alasdaircf" target="tab">Twitter<small>If sporadic geeky tweets are your thing</small></a></li>
+        </ul>
+    </section>
+    <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a>
+    </footer>
+</div>
+<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+<!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
 </body>
+</html>
